Bug 214157 - [iOS] Conversation view messages in Mail are too small and scrollable
Summary: [iOS] Conversation view messages in Mail are too small and scrollable
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-07-09 12:56 PDT by zalan
Modified: 2020-07-09 14:00 PDT (History)
1 user (show)

See Also:


Attachments
Patch (2.05 KB, patch)
2020-07-09 13:07 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2020-07-09 12:56:50 PDT
<rdar://problem/64788069>
Comment 1 zalan 2020-07-09 13:07:05 PDT
Created attachment 403908 [details]
Patch
Comment 2 Wenson Hsieh 2020-07-09 13:09:43 PDT
Comment on attachment 403908 [details]
Patch

Thanks for the fix!
Comment 3 EWS 2020-07-09 13:59:59 PDT
Committed r264194: <https://trac.webkit.org/changeset/264194>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 403908 [details].