[iOS] Conversation view messages in Mail are too small and scrollable https://bugs.webkit.org/show_bug.cgi?id=214157 <rdar://problem/64788069>

Reviewed by Wenson Hsieh.

Revert the drive-by contentSize set optimization introduced in r262721.
iOS Mail relies on this delayed/late setContentSize call on WKScrollView (see rdar://problem/65277759).

* UIProcess/ios/WKScrollView.mm:
(-[WKScrollView _setContentSizePreservingContentOffsetDuringRubberband:]):


Canonical link: https://commits.webkit.org/226963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264194 268f45cc-cd09-0410-ab3c-d52691b4dbfc